# ROLL

./: .envrc  .gitignore  SETUP.md  flake.nix  pyproject.toml
roll/distributed/scheduler/: generate_scheduler.py  reward_scheduler.py
roll/models/: model_providers.py
roll/pipeline/: base_worker.py
roll/pipeline/agentic/: agentic_config.py  agentic_pipeline.py  environment_worker.py
roll/pipeline/rlvr/: actor_worker.py  rlvr_config.py  rlvr_pipeline.py
roll/pipeline/rlvr/rewards/: code_sandbox_reward_worker.py  crossthinkqa_rule_reward_worker.py  general_val_rule_reward_worker.py  ifeval_rule_reward_worker.py  math_rule_reward_worker.py
roll/utils/: functionals.py
tests/distributed/strategy/generate/: generate_pipeline.py
tests/math/: test_math_dataset.py
tests/models/cuda_mem/: test_large_gemm.py
